Fixes overlapping comment box

--- a/assets/css/yir.css
+++ b/assets/css/yir.css
@@ -1242,6 +1242,7 @@ text-shadow: 0px 1px 2px rgba(0,0,0,.5);
     background: #F8F8F8;
     overflow: hidden;
     z-index: 20;
+	height:60%;
 } 
 #allcomments .collection {
     display: none;
